--- a/src/styles/header/header.sass
+++ b/src/styles/header/header.sass
@@ -1,7 +1,12 @@
 .header
+    background-image: url(../img/about.jpg)    
+    height: 400px  
+
+.background
+    background: rgba(0, 0, 0, 0.5)
     display: flex
-    background-image: url(../img/about.jpg)
     height: 400px
+    width: 1920px
     padding-top: 188px
     &__text
         font-family: 'Raleway', sans-serif
