--- a/src/styles/header/header.sass
+++ b/src/styles/header/header.sass
@@ -1,12 +1,13 @@
 .header
-    background-image: url(../img/about.jpg)    
+    display: flex
+    background-image: url(../img/about.jpg) 
     height: 400px  
 
 .background
     background: rgba(0, 0, 0, 0.5)
     display: flex
     height: 400px
-    width: 1920px
+    width: 100%
     padding-top: 188px
     &__text
         font-family: 'Raleway', sans-serif
