--- a/src/styles/fonts/Releway.css
+++ b/src/styles/fonts/Releway.css
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Releway';
     src: url(./Raleway-ExtraBold.ttf) format('true-type');
 }
