--- a/src/styles/media/media.sass
+++ b/src/styles/media/media.sass
@@ -1,12 +1,50 @@
+@media screen and (max-width: 1500px)
+    .command
+        width: 100% !important
+    .our
+        width: 61%
+        margin: 0 auto
+    .our-team
+        flex: 0 0 80% !important
+        &:last-of-type
+            margin: 0 !important
+
+
 @media screen and (max-width: 1356px)
+    .wrapper
+        margin: 0 20px
+    .background
+        &__text
+            font-size: 50px
     .help
         &__subtext  
             margin: 0
     .form
         width: 100%
+        height: 300px
         &__button
+            text-align: center
             width: 60%
             height: auto
     
     .input
-        justify-content: space-evenly
+        justify-content: center
+        &__name
+            border: 1px solid grey
+        &__email
+            border: 1px solid grey
+
+
+
+@media screen and (max-width: 1132px)
+    .our
+        width: 90%
+    .team
+        flex: 0 0 100% !important
+        text-align: center
+    .our-team
+        flex: 0 0 100% !important
+        &__img
+            flex: 0 0 100% !important
+            padding-left: 0 !important
+            background-position: center !important
