--- a/src/styles/feadback/feadback.sass
+++ b/src/styles/feadback/feadback.sass
@@ -31,6 +31,7 @@
     flex-direction: column
     padding: 80px 0 30px
     &__text
+        padding-bottom: 30px
         margin: 0 auto
         font-family: 'Raleway', sans-serif
         font-style: normal
