--- a/src/styles/command/command.sass
+++ b/src/styles/command/command.sass
@@ -32,10 +32,13 @@
             &__img
                 background: url('../img/1.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
+            a
             &__snob
                 background-image: url('../img/snob.png')
     &:nth-child(2)
@@ -43,10 +46,13 @@
             &__img
                 background: url('../img/2.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
+            a
             &__snob
                 background-image: url('../img/snob.png')
     &:nth-child(3)
@@ -54,6 +60,7 @@
             &__img
                 background: url('../img/3.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
     &:nth-child(4)
@@ -61,14 +68,19 @@
             &__img
                 background: url('../img/4.png') left no-repeat
         .social
+            a
             &__instagram
                 background-image: url('../img/instagram.png')
+            a
             &__twitter
                 background-image: url('../img/twitter.png')
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
+            a
             &__snob
                 background-image: url('../img/snob.png')
     &:nth-child(5)
@@ -76,8 +88,10 @@
             &__img
                 background: url('../img/5.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
     &:nth-child(6)
@@ -85,8 +99,10 @@
             &__img
                 background: url('../img/6.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
     &:nth-child(7)
@@ -94,8 +110,10 @@
             &__img
                 background: url('../img/7.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
     &:nth-child(8)
@@ -103,10 +121,13 @@
             &__img
                 background: url('../img/8.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
+            a
             &__snob
                 background-image: url('../img/snob.png')
     &:nth-child(9)
@@ -114,10 +135,13 @@
             &__img
                 background: url('../img/9.png') left no-repeat
         .social
+            a
             &__facebook
                 background-image: url('../img/facebook.png')
+            a
             &__linkedin
                 background-image: url('../img/linkedin.png')
+            a
             &__snob
                 background-image: url('../img/snob.png')
     &:nth-child(10)
