--- a/src/styles/media/media.sass
+++ b/src/styles/media/media.sass
@@ -20,19 +20,23 @@
         &__subtext  
             margin: 0
     .form
-        width: 100%
+        width: 70%
         height: 300px
         &__button
             text-align: center
             width: 60%
             height: auto
+    .border
+        margin-left: 20px
     
     .input
         justify-content: center
         &__name
             border: 1px solid grey
+            margin: 0 5px 5px 0
         &__email
             border: 1px solid grey
+            margin: 0 5px 5px 0
 
 
 
